--- a/src/css/components.css
+++ b/src/css/components.css
@@ -38,6 +38,23 @@ p{
     background-color: #F0F0F0;
     border-radius: 8px;
 }
+
+.avatar-and-follow-icon{
+    display: flex;
+    flex-direction: row;
+}
+
+.follow-icon-avatar{
+    margin-top: 20px;
+    margin-left: -12px;
+    background-color: white;
+    padding: 0;
+    width: fit-content;
+    height: fit-content;
+    line-height: 0;
+    border-radius: 100%;
+}
+
 @media only screen and (max-width:720px){
     .nav{
         width: 100vw;
