--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,73 +1,15 @@
 
-header{
-    z-index: 100;
-    position: absolute;
-    width: 100vw;
-    top: 30px;
-    width: 100%;
-}
 
-
-.header-bar {
-    display: flex;
-    flex-direction: row;
-}
-
-.header-bar .logo{
-    font-size: 24px;    
-}
-
-.header-bar .user-dropdown-menu{
-    position: absolute;
-    right: 1rem;
+.header-bar{
     display: none;
 }
 
-.header-bar .user-dropdown-menu:hover{
-    cursor: pointer;
-}
-.user-dropdown-menu .nav-dropdown{
-    list-style-type: none;
-    z-index: 50;
-    width: 172px;
-    height: 328px;
-    border: 1px solid #aeaeae;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    background-color: white;
-    padding: 12px;
-    top: 0;
-    left: 0;
-    border-radius: 8px 0 0 8px;
-    
-}
 
-
-
-.nav-dropdown .nav-item{
-    margin: 0;
-}
-.nav-dropdown .nav-item .nav-link {
-    box-sizing: border-box;
-    font-size: 16px;
-    padding: 12px 18px;
-}
-
-.nav a {
-    color: black;
-}
-
-.nav .nav-item .nav-link:hover{
-    color: black !important;
-    background-color: #F0F0F0;
-    border-radius: 8px;
-}
 
 p{
     margin: 0;
 }
+
 
 .thread-card{
     box-shadow: none;
@@ -90,21 +32,46 @@ p{
 .thread-card .card-footer {
     padding:8px 0;
 }
-.nav{
-    z-index: 50;
+.desktop-navbar{
     width: 30%;
     height: 100vh;
-    min-width: 219px;
+    max-width: 219px;
+    border: 1px solid #aeaeae;
+    
+}
+.navbar-logo{
+    width: 64px;
+    height: 64px;
+    position: absolute;
+    left: 50%; /* position the left edge of the element at the middle of the parent */
+    top: 4rem;
+    transform: translate(-50%, 0%);
+}
+
+.navbar-logo img{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1;
+
+}
+.nav{
+    z-index: 10;
+    width: 100%;
+    height: 100%;
     border: 1px solid #aeaeae;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    background-color: white;
-    top: 0;
-    left: 0;
+}
+.nav a {
+    color: black;
 }
 
+.nav .nav-item .nav-link:hover{
+    color: black !important;
+    background-color: #F0F0F0;
+    border-radius: 8px;
+}
 .nav-item{
     margin: 10px;
 }
@@ -176,6 +143,10 @@ p{
 }
 
 @media only screen and (max-width:1140px){
+    .desktop-navbar{
+        width: fit-content;
+        
+    }
     .nav{
         width: fit-content;
         min-width: fit-content;
@@ -217,11 +188,72 @@ p{
         display: none;
     }
 
-    .header-bar .user-dropdown-menu{
+    .header-bar{
         display: block;
     }
-    
+
     .comment-card{
         padding: 12px;
+    }
+    .navbar-logo{
+        display: none;
+    }
+    .header-bar {
+        height: 68px;
+        width: 100vw;
+    }
+    
+    .header-bar .logo{
+        width: 64px;
+        height: 64px;
+        position: absolute;
+        left: 50%; /* position the left edge of the element at the middle of the parent */
+        top: 0.5rem;
+        transform: translate(-50%, 0);
+    }
+    
+    .header-bar .logo img{
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 1;
+    
+    }
+    
+    .header-bar .user-dropdown-menu{
+        position: absolute;
+        right: 1rem;
+        transform: translate(0, +50%);
+    }
+    
+    .header-bar .user-dropdown-menu:hover{
+        cursor: pointer;
+    }
+    .user-dropdown-menu .nav-dropdown{
+        list-style-type: none;
+        z-index: 50;
+        width: 172px;
+        height: 328px;
+        border: 1px solid #aeaeae;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: absolute;
+        background-color: white;
+        padding: 12px;
+        top: 0;
+        left: 0;
+        border-radius: 8px 0 0 8px;
+        
+    }
+    
+    
+    
+    .nav-dropdown .nav-item{
+        margin: 0;
+    }
+    .nav-dropdown .nav-item .nav-link {
+        box-sizing: border-box;
+        font-size: 16px;
+        padding: 12px 18px;
     }
 }
