--- a/src/css/thread-feed-display.css
+++ b/src/css/thread-feed-display.css
@@ -1,4 +1,8 @@
-.thread-container{
+#top-bar {
+    text-align: center;
+}
+
+.thread-container {
     width: 100%;
     min-width: 390px;
     max-width: 624px;
@@ -12,12 +16,12 @@
     scroll-behavior: smooth;
 }
 
-.thread-container::-webkit-scrollbar{
+.thread-container::-webkit-scrollbar {
     display: none;
-    
+
 }
 
-#thread-display-section{
+#thread-display-section {
     width: fit-content;
     margin: 0 auto;
     height: 100vh;
@@ -25,20 +29,20 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    
+
 }
 
-#thread-display-section .dropdown{
-    padding: 12px 0; 
+#thread-display-section .dropdown {
+    padding: 12px 0;
     font-size: 20px;
     width: fit-content;
     margin: 0 auto;
 }
 
 
-@media only screen and (max-width:700px){
+@media only screen and (max-width:700px) {
 
-    .thread-container{
+    .thread-container {
         width: 100%;
         max-width: 100%;
         min-width: 390px;
@@ -50,12 +54,12 @@
         overflow-y: scroll;
         scroll-behavior: smooth;
     }
-    
-    .thread-container::-webkit-scrollbar{
+
+    .thread-container::-webkit-scrollbar {
         display: none;
     }
-    
-    #thread-display-section{
+
+    #thread-display-section {
         width: 100vw;
         margin: 0 auto;
         height: calc(100vh - 48px - 68px);
@@ -63,10 +67,10 @@
         padding: 0;
         display: flex;
         flex-direction: column;
-        
+
     }
 
-    #thread-display-section .dropdown{
+    #thread-display-section .dropdown {
         padding: 0;
         font-size: 20px;
         width: 100%;
@@ -75,11 +79,11 @@
         /* display: none; */
     }
 
-    #thread-display-section #triggerId{
+    #thread-display-section #triggerId {
         display: none;
     }
-    
-    #thread-display-section .dropdown-menu{
+
+    #thread-display-section .dropdown-menu {
         display: flex;
         position: relative;
         border: none;
@@ -88,11 +92,13 @@
         padding: 0;
 
     }
-    #thread-display-section .dropdown-menu button{
+
+    #thread-display-section .dropdown-menu button {
         border-radius: 0;
         appearance: block;
     }
-    #thread-display-section .dropdown-item{
+
+    #thread-display-section .dropdown-item {
         padding: 12px 0;
         border-radius: 0;
         width: 50%;
