--- a/src/profile/profile.css
+++ b/src/profile/profile.css
@@ -1,9 +1,3 @@
-header {
-    text-align: center;
-    padding: 10px;
-    border-bottom: 2px solid lightgray;
-}
-
-main {
+.profile-container {
     padding: 20px;
 }
