--- a/src/css/thread-feed-display.css
+++ b/src/css/thread-feed-display.css
@@ -179,8 +179,13 @@
         width: 50%;
         border-top: solid 1px #aeaeae;
         border-bottom: solid 1px #aeaeae;
+        color: #aeaeae;
         text-align: center;
         box-sizing: border-box;
     }
-
+    #thread-display-section .on-active-page{
+        color: #000000;
+        border-top: solid 1px #000000;
+        border-bottom: solid 1px #000000;
+    }
 }
